# maui-lfmc

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/: conus_finetune.yaml  inference.yaml  maui_finetune.yaml
docs/: ARCHITECTURE.md
notebooks/: 01_explore_globe_lfmc.py
scripts/: plot_aug2023.py  plot_comparison.py  plot_timeseries.py  run_all_years.py  update_webmap.py
src/data/: dataset.py  download_tifs.py  globe_lfmc_filter.py  parallel_download.py  sentinel_download.py
src/inference/: map_generator.py
src/model/: lfmc_head.py  train.py  training.py
src/visualization/: plot_maps.py
