[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "maui-lfmc"
version = "0.1.0"
description = "Mapping wildfire risk in Maui County using live fuel moisture content"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.pytest.ini_options]
testpaths = ["tests"]
